--- a/.classpath
+++ b/.classpath
@@ -7,6 +7,7 @@
 	<classpathentry kind="src" path="dataStructure"/>
 	<classpathentry kind="src" path="TEST"/>
 	<classpathentry kind="src" path="String"/>
+	<classpathentry kind="src" path="Stack"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
