--- a/.classpath
+++ b/.classpath
@@ -8,6 +8,7 @@
 	<classpathentry kind="src" path="TEST"/>
 	<classpathentry kind="src" path="String"/>
 	<classpathentry kind="src" path="Stack"/>
+	<classpathentry kind="src" path="Tree"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
