--- a/.classpath
+++ b/.classpath
@@ -10,6 +10,11 @@
 	<classpathentry kind="src" path="Stack"/>
 	<classpathentry kind="src" path="Tree"/>
 	<classpathentry kind="src" path="graph"/>
+	<classpathentry kind="src" path="Union"/>
+	<classpathentry kind="src" path="BFS"/>
+	<classpathentry kind="src" path="DFS"/>
+	<classpathentry kind="src" path="Divide and Couquer"/>
+	<classpathentry kind="src" path="LinkedList"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
