Heap, binary Search, Divide and conquer

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//Array/Problem35_Search_Insert_Position.java=UTF-8
 encoding//String/Problem32_Longest_Valid_Parentheses.java=UTF-8
+encoding//Tree/Problem236_LowestCommonAncestor_of_a_BinaryTree.java=UTF-8
