--- a/.classpath
+++ b/.classpath
@@ -15,6 +15,9 @@
 	<classpathentry kind="src" path="DFS"/>
 	<classpathentry kind="src" path="Divide and Couquer"/>
 	<classpathentry kind="src" path="LinkedList"/>
+	<classpathentry kind="src" path="BackTracking"/>
+	<classpathentry kind="src" path="BinaryIndexTree"/>
+	<classpathentry kind="src" path="BinarySearch"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
